--- a/webapp/cloudClass1/pom.xml
+++ b/webapp/cloudClass1/pom.xml
@@ -4,9 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.demo</groupId>
-    <artifactId>cloudClass1</artifactId>
+    <groupId>step-count</groupId>
+    <artifactId>step-count</artifactId>
     <version>1.0-SNAPSHOT</version>
+
 
 
     <parent>
@@ -112,5 +113,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
