--- a/webapp/cloudClass1/src/main/resources/application.properties
+++ b/webapp/cloudClass1/src/main/resources/application.properties
@@ -1,21 +1,23 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/db_example
-#spring.datasource.username=springuser
-#spring.datasource.password=ThePassword
+spring.datasource.url=jdbc:mysql://localhost:3306/steps_db
+spring.datasource.username=root
+spring.datasource.password=
 
-spring.datasource.url=jdbc:mysql://${db}/csye6225
-spring.datasource.username=csye6225master
-spring.datasource.password=csye6225password
+#spring.datasource.url=jdbc:mysql://${db}/csye6225
+#spring.datasource.username=csye6225master
+#spring.datasource.password=csye6225password
 
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
-spring.http.multipart.enabled=false
 
-spring.profiles.active=prod
+
+spring.profiles.active=dev
 
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 logging.file=myapplication.log
+
